WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31504
InspectorTimelineAgent.h should be guarded by ENABLE(INSPECTOR)
https://bugs.webkit.org/show_bug.cgi?id=31504
Summary
InspectorTimelineAgent.h should be guarded by ENABLE(INSPECTOR)
Nicolas Roard
Reported
2009-11-13 20:08:56 PST
InspectorTimelineAgent.h defines an inline function that calls a function on the document, returning the inspector... But if you try compiling webkit without inspectors, that document's function is not defined, and InspectorTimelineAgent.h thus cause a compile error. I'll upload a patch soon.
Attachments
Add a guard to compile the class only if ENABLE(INSPECTOR)
(1.14 KB, patch)
2009-11-13 20:17 PST
,
Nicolas Roard
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nicolas Roard
Comment 1
2009-11-13 20:17:30 PST
Created
attachment 43221
[details]
Add a guard to compile the class only if ENABLE(INSPECTOR)
Dimitri Glazkov (Google)
Comment 2
2009-11-13 20:22:20 PST
Comment on
attachment 43221
[details]
Add a guard to compile the class only if ENABLE(INSPECTOR) Don't forget to mark the attachment as patch. And may I interest you in the wonderful world of WebKitTools/Scripts/bugzilla-tool? (eseidel, how does you commission scheme work again?)
Dimitri Glazkov (Google)
Comment 3
2009-11-13 20:23:07 PST
Comment on
attachment 43221
[details]
Add a guard to compile the class only if ENABLE(INSPECTOR) r=me.
Adam Barth
Comment 4
2009-11-15 23:52:06 PST
Comment on
attachment 43221
[details]
Add a guard to compile the class only if ENABLE(INSPECTOR) Rejecting patch 43221 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1']" exit_code: 1 Running build-dumprendertree Running tests from /Users/abarth/git/webkit-kr/LayoutTests Testing 11625 test cases. plugins/document-open.html -> failed Exiting early after 1 failures. 9531 tests run. 498.78s total testing time 9530 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 10 test cases (<1%) had stderr output
Adam Barth
Comment 5
2009-11-15 23:53:50 PST
Comment on
attachment 43221
[details]
Add a guard to compile the class only if ENABLE(INSPECTOR) Likely a false rejection...
WebKit Commit Bot
Comment 6
2009-11-16 18:13:55 PST
Comment on
attachment 43221
[details]
Add a guard to compile the class only if ENABLE(INSPECTOR) Rejecting patch 43221 from commit-queue. Failed to run "['git', 'svn', 'dcommit']" exit_code: 1 Last 500 characters of output: mmitting to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/inspector/InspectorTimelineAgent.h A repository hook failed: MERGE request failed on '/repository/webkit/trunk': Commit blocked by pre-commit hook (exit code 1) with output: svnlook: Can't write to stream: Broken pipe The following ChangeLog files contain OOPS: trunk/WebCore/ChangeLog Please don't ever say "OOPS" in a ChangeLog file. at /usr/local/libexec/git-core//git-svn line 469
Eric Seidel (no email)
Comment 7
2009-11-16 18:15:50 PST
Comment on
attachment 43221
[details]
Add a guard to compile the class only if ENABLE(INSPECTOR) ChangeLog looks fine to me. I suspect something is wrong with our re-born commit-queue. I'll investigate tomorrow.
WebKit Commit Bot
Comment 8
2009-11-17 12:03:04 PST
Comment on
attachment 43221
[details]
Add a guard to compile the class only if ENABLE(INSPECTOR) Rejecting patch 43221 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1']" exit_code: 1 Running build-dumprendertree Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 11628 test cases. http/tests/xmlhttprequest/access-control-basic-allow-access-control-origin-header.html -> crashed Exiting early after 1 failures. 9160 tests run. 479.50s total testing time 9159 test cases (99%) succeeded 1 test case (<1%) crashed 5 test cases (<1%) had stderr output
Eric Seidel (no email)
Comment 9
2009-11-17 12:08:45 PST
Comment on
attachment 43221
[details]
Add a guard to compile the class only if ENABLE(INSPECTOR) Bah! Looks like
bug 31461
is still plaguing us. :(
WebKit Commit Bot
Comment 10
2009-11-17 12:31:16 PST
Comment on
attachment 43221
[details]
Add a guard to compile the class only if ENABLE(INSPECTOR) Rejecting patch 43221 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1']" exit_code: 1 Running build-dumprendertree Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 11628 test cases. inspector/console-dir.html -> crashed Exiting early after 1 failures. 9322 tests run. 383.17s total testing time 9321 test cases (99%) succeeded 1 test case (<1%) crashed 5 test cases (<1%) had stderr output
Eric Seidel (no email)
Comment 11
2009-11-17 13:04:59 PST
Comment on
attachment 43221
[details]
Add a guard to compile the class only if ENABLE(INSPECTOR) Sigh.
Bug 31461
.
WebKit Commit Bot
Comment 12
2009-11-18 14:25:51 PST
Comment on
attachment 43221
[details]
Add a guard to compile the class only if ENABLE(INSPECTOR) Clearing flags on attachment: 43221 Committed
r51136
: <
http://trac.webkit.org/changeset/51136
>
WebKit Commit Bot
Comment 13
2009-11-18 14:26:03 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug