2009-11-18  Nicolas Roard   <nicolas@roard.com>

Reviewed by Dimitri Glazkov.

        InspectorTimelineAgent.h should be guarded by ENABLE(INSPECTOR)
        https://bugs.webkit.org/show_bug.cgi?id=31504

        * inspector/InspectorTimelineAgent.h:Added the guard.

git-svn-id: svn://svn.chromium.org/blink/trunk@51136 bbb929c8-8fbe-4397-9dbb-9b2b20218538