third_party/WebKit/WebCore/inspector/InspectorTimelineAgent.h
@@ -32,6 +32,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef InspectorTimelineAgent_h
 #define InspectorTimelineAgent_h
 
+#if ENABLE(INSPECTOR)
+
 #include "Document.h"
 #include "ScriptExecutionContext.h"
 #include "ScriptObject.h"
@@ -138,4 +140,5 @@ inline InspectorTimelineAgent* InspectorTimelineAgent::retrieve(ScriptExecutionC
 
 } // namespace WebCore
 
+#endif // !ENABLE(INSPECTOR)
 #endif // !defined(InspectorTimelineAgent_h)
